--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,5 +13,6 @@
     <%- body %>
     <%- include('./partials/footer.ejs') %>
     <script src='/javascript/header.js'></script>
+    <script src='/javascript/alerts.js'></script>
   </body>
 </html>
