--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
     <address>
       My name is: Arthur D'Amato </br>
       Live in: Seattle, WA </br>
-      Email: <a href="mailto:mr.arthurdamato@gmail.com" style="color:whitesmoke">mr.arthurdamato@gmail.com</a>
+      Email: <a id="myEmail" href="mailto:mr.arthurdamato@gmail.com">mr.arthurdamato@gmail.com</a>
     </address>
   </span>
   <span class="column right">
