--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -230,7 +230,7 @@ header {
 #home {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   align-content: center;
   padding: var(--pad-mar-xl);
