--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,13 +4,17 @@
      Log In
    </legend>
    <form action="/auth/login" method="POST">
-    <label for="auth-email">Email: </label>
-    <input id="auth-email" type="email" name="email">
-    </br>
-    <label for="auth-password">Password: </label>
-    <input id="auth-password" type="password" name="password">
-    </br>
-    <input type="submit" value="Log In">
+    <div class="row">
+      <label class='middle' for="auth-email">Email: </label>
+      <input id="auth-email" type="email" name="email">
+    </div>
+    <div class="row">
+      <label class='middle' for="auth-password">Password: </label>
+      <input id="auth-password" type="password" name="password">
+    </div>
+    <button type="submit">
+      Submit
+    </button>
   </form>
  </fieldset>
 </main>
