--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -4,16 +4,19 @@
       Sign Up
     </legend>
     <form action="/auth/signup" method="POST">
-      <label for="new-email">Email: </label>
-      <input id="new-email" type="email" name="email">
-      </br>
-      <label for="new-name">Name: </label>
-      <input id="new-name" type="text" name="name">
-      </br>
-      <label for="new-password">Password: </label>
-      <input id="new-password" type="password" name="password">
-      </br>
-      <input type="submit" value="Sign Up">
+      <div class="row">
+        <label class='middle' for="new-email">Email: </label>
+        <input id="new-email" type="email" name="email">
+      </div>
+      <div class="row">
+        <label class='middle' for="new-name">Name: </label>
+        <input id="new-name" type="text" name="name">
+      </div>
+      <div class="row">
+        <label class='middle' for="new-password">Password: </label>
+        <input id="new-password" type="password" name="password">
+      </div>
+      <button type="submit">Submit</button>
     </form>
   </fieldset>
 </main>
