--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,12 @@
         
         <ul id="navList">
         <% if (currentUser) { %>
-            <li class="navLi"><a href="/">Home Page</a></li>
-            <li class="navLi"><a href="/food/foods">Menus</a></li>
-            <li class="navLi"><a href="/profile">Profile</a></li>
+            <li class="navLi"><a href="/">Home</a></li>
+            <li class="navLi"><a href="/food/foods">Ingredients</a></li>
+            <li class="navLi"><a href="/profile">Recipes</a></li>
             <li class="navLi"><a href="/auth/logout">Logout</a></li>
             <% } else { %>
-            <li class="navLi"><a href="/">Home Page</a></li>
+            <li class="navLi"><a href="/">Home</a></li>
             <li class="navLi"><a href="/auth/login">Login</a></li>
             <li class="navLi"><a href="/auth/signup">Signup</a></li>
             <% } %>           
