--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,7 @@
   top:40%;
   left: 50%;
   padding: var(--pad-mar-reg);
+  overflow: auto;
 }
 
 #alert-container-error{
@@ -451,7 +452,7 @@ nav ul li {
 }
 
 p {
-  text-align: center;
+  text-align: left;
 }
 
 #recipeList {
